--- a/src/style/main.css
+++ b/src/style/main.css
@@ -126,3 +126,25 @@ img:hover {
   color: white;
   z-index: 7;
 }
+
+.no--bookmark {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.no--bookmark__text {
+  font-size: 40px;
+}
+
+.fa-cart-shopping {
+  color: #442cdc;
+  padding-top: 40px;
+  padding-left: 100px;
+}
+
+.disable {
+  display: none;
+}
